--- a/index.html
+++ b/index.html
@@ -29,13 +29,8 @@
                 <span class="label">Seconds</span>
             </div>
         </div>
-        <div class="landing-buttons">
-            <button class="landing-button" id="menu-button">Menu</button>
-            <button class="landing-button" id="collage-button">Collage</button>
-            <button class="landing-button" id="info-button">Info</button>
-            <button class="landing-button" id="other-button">Other</button>
-        </div>
+        <button class="welcome-button" id="start-button">Enjoy the ride</button>
     </div>
-    <script src="landing-script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
