--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container" id="welcome-screen">
+        <img src="images/bild1.jpg" alt="Wedding Image" class="welcome-image">
         <div class="welcome-text">
             Welcome to our Wedding
         </div>
