--- a/landing.html
+++ b/landing.html
@@ -27,10 +27,10 @@
             </div>
         </div>
         <div class="landing-buttons">
-            <button class="landing-button">Menu</button>
+            <button class="landing-button" id="menu-button">Menu</button>
             <button class="landing-button" id="collage-button">Collage</button>
             <button class="landing-button" id="info-button">Info</button>
-            <button class="landing-button">Other</button>
+            <button class="landing-button" id="other-button">Other</button>
         </div>
     </div>
     <script src="landing-script.js"></script>
