--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </div>
         </div>
         <button class="welcome-button" id="start-button">Enjoy the ride</button>
+        <img src="images/bild1.png" alt="Wedding Image" class="rotated-image">
     </div>
     <script src="script.js"></script>
 </body>
