--- a/landing.html
+++ b/landing.html
@@ -31,6 +31,7 @@
             <button class="landing-button" id="collage-button">Collage</button>
             <button class="landing-button" id="info-button">Info</button>
             <button class="landing-button" id="other-button">Other</button>
+            <button class="landing-button" id="osa-button">OSA</button> <!-- New OSA button -->
         </div>
     </div>
     <script src="landing-script.js"></script>
