--- a/landing.html
+++ b/landing.html
@@ -27,11 +27,11 @@
             </div>
         </div>
         <div class="landing-buttons">
+            <button class="landing-button" id="rsvp-button" onclick="location.href='RSVP.html'">RSVP</button>
             <button class="landing-button" id="menu-button">Menu</button>
             <button class="landing-button" id="collage-button">Collage</button>
             <button class="landing-button" id="info-button">Info</button>
             <button class="landing-button" id="other-button">Other</button>
-            <button class="landing-button" id="osa-button">OSA</button> <!-- New OSA button -->
         </div>
     </div>
     <script src="landing-script.js"></script>
