--- a/RSVP.html
+++ b/RSVP.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RSVP</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container" id="rsvp-page">
+        <h1>RSVP</h1>
+        <form>
+            <label for="number-of-guests">How many will come:</label>
+            <input type="number" id="number-of-guests" name="number-of-guests" required>
 
+            <label for="guest1-name">Name of Guest 1:</label>
+            <input type="text" id="guest1-name" name="guest1-name" required>
+
+            <label for="guest1-age">Age of Guest 1:</label>
+            <input type="number" id="guest1-age" name="guest1-age" required>
+
+            <label for="guest1-mobile">Mobile Number of Guest 1:</label>
+            <input type="tel" id="guest1-mobile" name="guest1-mobile" required>
+
+            <label for="guest2-name">Name of Guest 2:</label>
+            <input type="text" id="guest2-name" name="guest2-name" required>
+
+            <label for="guest2-age">Age of Guest 2:</label>
+            <input type="number" id="guest2-age" name="guest2-age" required>
+
+            <label for="guest2-mobile">Mobile Number of Guest 2:</label>
+            <input type="tel" id="guest2-mobile" name="guest2-mobile" required>
+
+            <label for="allergies">Allergies:</label>
+            <input type="text" id="allergies" name="allergies" required>
+
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+</body>
+</html>
