--- a/RSVP.html
+++ b/RSVP.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container" id="rsvp-page">
         <h1>RSVP</h1>
-        <form id="rsvp-form" action="https://formspree.io/f/{AKfycbz-X3u2qnSsX2V93yZLCuELvMSd3Fka7E_KyDZlnckcMhT9E-dfwLiPO38B47sj4Ayt}" method="post">
+        <form id="rsvp-form" action="https://script.google.com/macros/s/AKfycbz-X3u2qnSsX2V93yZLCuELvMSd3Fka7E_KyDZlnckcMhT9E-dfwLiPO38B47sj4Ayt/exec" method="post">
             <div class="form-group">
                 <label for="number-of-guests">How many will come:</label>
                 <input type="number" id="number-of-guests" name="number-of-guests" required>
