--- a/RSVP.html
+++ b/RSVP.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container" id="rsvp-page">
         <h1>RSVP</h1>
-        <form id="rsvp-form" action="https://script.google.com/macros/s/AKfycbxd9sIV5v5GV7qPxaPcaUBXOzIK_FpZwmI-cfCqYps/dev" method="post">
+        <form id="rsvp-form" action="YOUR_GOOGLE_APPS_SCRIPT_URL" method="post">
             <div class="form-group">
                 <label for="number-of-guests">How many will come:</label>
                 <input type="number" id="number-of-guests" name="number-of-guests" required>
