--- a/info.html
+++ b/info.html
@@ -8,8 +8,15 @@
 </head>
 <body>
     <div class="container" id="info-page">
-        <h1>Info</h1>
-        <!-- Info content goes here -->
+        <h1 class="info-header">Info</h1>
+        <div class="info-content">
+            <ul>
+                <li>Date: June 7, 2025</li>
+                <li>Venue: Grand Hotel, Gothenburg</li>
+                <li>Dress Code: Formal</li>
+                <li>RSVP Deadline: May 1, 2025</li>
+            </ul>
+        </div>
         <button class="back-button" onclick="location.href='landing.html'">Back to Home</button>
     </div>
 </body>
