--- a/collage.html
+++ b/collage.html
@@ -8,8 +8,15 @@
 </head>
 <body>
     <div class="container" id="collage-page">
-        <h1>Collage</h1>
-        <!-- Collage content goes here -->
+        <h1 class="collage-header">Collage</h1>
+        <div class="collage-content">
+            <div class="gallery">
+                <img src="images/photo1.jpg" alt="Photo 1">
+                <img src="images/photo2.jpg" alt="Photo 2">
+                <img src="images/photo3.jpg" alt="Photo 3">
+                <img src="images/photo4.jpg" alt="Photo 4">
+            </div>
+        </div>
         <button class="back-button" onclick="location.href='landing.html'">Back to Home</button>
     </div>
 </body>
