--- a/collage.html
+++ b/collage.html
@@ -15,6 +15,17 @@
                 <img src="images/photo2.jpg" alt="Photo 2">
                 <img src="images/photo3.jpg" alt="Photo 3">
                 <img src="images/photo4.jpg" alt="Photo 4">
+                <img src="images/photo4.jpg" alt="Photo 5">
+                <img src="images/photo4.jpg" alt="Photo 6">
+                <img src="images/photo4.jpg" alt="Photo 7">
+                <img src="images/photo4.jpg" alt="Photo 8">
+                <img src="images/photo4.jpg" alt="Photo 9">
+                <img src="images/photo4.jpg" alt="Photo 10">
+                <img src="images/photo4.jpg" alt="Photo 11">
+                <img src="images/photo4.jpg" alt="Photo 12">
+                <img src="images/photo4.jpg" alt="Photo 13">
+                <img src="images/photo4.jpg" alt="Photo 14">
+                <img src="images/photo4.jpg" alt="Photo 15">
             </div>
         </div>
         <button class="back-button" onclick="location.href='landing.html'">Back to Home</button>
