--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
         <button class="welcome-button" id="start-button">Enjoy the ride</button>
         <img src="images/bild1.png" alt="Wedding Image" class="rotated-image">
+        <button class="back-button" onclick="location.href='landing.html'">Back to Home</button>
     </div>
     <script src="script.js"></script>
 </body>
