--- a/RSVP.html
+++ b/RSVP.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container" id="rsvp-page">
         <h1>RSVP</h1>
-        <form id="rsvp-form" action="https://script.google.com/macros/s/AKfycbxHbqvTPm_i5PRRSfGyWmRhgxOFoSP3v_J3Mld0j2baOHqxXnKdJr9gPGwtM1SHkKKo/exec" method="post">
+        <form id="rsvp-form" action=https://script.google.com/macros/s/AKfycbxHbqvTPm_i5PRRSfGyWmRhgxOFoSP3v_J3Mld0j2baOHqxXnKdJr9gPGwtM1SHkKKo/exec method="post">
             <div class="form-group">
                 <label for="number-of-guests">How many will come:</label>
                 <input type="number" id="number-of-guests" name="number-of-guests" required>
