--- a/RSVP.html
+++ b/RSVP.html
@@ -9,41 +9,8 @@
 <body>
     <div class="container" id="rsvp-page">
         <h1>RSVP</h1>
-        <form id="rsvp-form" action="https://script.google.com/macros/s/AKfycbypkKdy-tQNZALtqWOChjnWz6LNKLkyRGYRWEeq8g2h-_demIPIbeVIvXYVF3MgH2Hw/exec" method="post">
-            <div class="form-group">
-                <label for="number-of-guests">How many will come:</label>
-                <input type="number" id="number-of-guests" name="number-of-guests" required>
-            </div>
-            <div class="form-group">
-                <label for="guest1-name">Name of Guest 1:</label>
-                <input type="text" id="guest1-name" name="guest1-name" required>
-            </div>
-            <div class="form-group">
-                <label for="guest1-age">Age of Guest 1:</label>
-                <input type="number" id="guest1-age" name="guest1-age" required>
-            </div>
-            <div class="form-group">
-                <label for="guest1-mobile">Mobile Number of Guest 1:</label>
-                <input type="tel" id="guest1-mobile" name="guest1-mobile" required>
-            </div>
-            <div class="form-group">
-                <label for="guest2-name">Name of Guest 2:</label>
-                <input type="text" id="guest2-name" name="guest2-name" required>
-            </div>
-            <div class="form-group">
-                <label for="guest2-age">Age of Guest 2:</label>
-                <input type="number" id="guest2-age" name="guest2-age" required>
-            </div>
-            <div class="form-group">
-                <label for="guest2-mobile">Mobile Number of Guest 2:</label>
-                <input type="tel" id="guest2-mobile" name="guest2-mobile" required>
-            </div>
-            <div class="form-group">
-                <label for="allergies">Allergies:</label>
-                <input type="text" id="allergies" name="allergies" required>
-            </div>
-            <button type="submit">Submit</button>
-        </form>
+        <!-- Embed the Google Form here -->
+        <iframe src="YOUR_GOOGLE_FORM_EMBED_URL" width="640" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         <button class="back-button" onclick="location.href='landing.html'">Back to Home</button>
     </div>
 </body>
